<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HouseAddComment"
    >
    <item
        android:id="@+id/bt_send_load_photo"
        app:showAsAction="always"
        android:orderInCategory="80"
        android:title="@string/load_photo"
        android:icon="@drawable/image_file"/>

    <item
        android:id="@+id/bt_send_make_photo"
        app:showAsAction="always"
        android:orderInCategory="80"
        android:title="@string/make_photo"
        android:icon="@drawable/camera"/>

    <item
        android:id="@+id/bt_send_comment"
        app:showAsAction="always"
        android:orderInCategory="90"
        android:title="@string/send_comment"
        android:icon="@drawable/ok"/>

    <item
        android:id="@+id/bt_send_cancel"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/txt_bt_cancel"
        android:icon="@drawable/cancel"/>

</menu>